; ModuleID = '/home/carl/AnghaBench/kphp-kdb/storage/extr_storage-data.c_do_md5_get_doc.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/storage/extr_storage-data.c_do_md5_get_doc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@STORAGE_ERR_UNKNOWN_VOLUME_ID = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @do_md5_get_doc(i64 %0, i8* %1, i64 %2, i32** %3, i64* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32**, align 8
  %11 = alloca i64*, align 8
  %12 = alloca i32, align 4
  store i64 %0, i64* %7, align 8
  store i8* %1, i8** %8, align 8
  store i64 %2, i64* %9, align 8
  store i32** %3, i32*** %10, align 8
  store i64* %4, i64** %11, align 8
  %13 = load i64, i64* %7, align 8
  %14 = call i32* @get_volume_f(i64 %13, i32 0)
  %15 = load i32**, i32*** %10, align 8
  store i32* %14, i32** %15, align 8
  %16 = load i32**, i32*** %10, align 8
  %17 = load i32*, i32** %16, align 8
  %18 = icmp eq i32* %17, null
  br i1 %18, label %19, label %21

19:                                               ; preds = %5
  %20 = load i32, i32* @STORAGE_ERR_UNKNOWN_VOLUME_ID, align 4
  store i32 %20, i32* %6, align 4
  br label %33

21:                                               ; preds = %5
  %22 = load i32**, i32*** %10, align 8
  %23 = load i32*, i32** %22, align 8
  %24 = load i8*, i8** %8, align 8
  %25 = load i64, i64* %9, align 8
  %26 = load i64*, i64** %11, align 8
  %27 = call i32 @md5_doc_lookup(i32* %23, i8* %24, i64 %25, i64* %26)
  store i32 %27, i32* %12, align 4
  %28 = load i32, i32* %12, align 4
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %30, label %32

30:                                               ; preds = %21
  %31 = load i32, i32* %12, align 4
  store i32 %31, i32* %6, align 4
  br label %33

32:                                               ; preds = %21
  store i32 0, i32* %6, align 4
  br label %33

33:                                               ; preds = %32, %30, %19
  %34 = load i32, i32* %6, align 4
  ret i32 %34
}

declare dso_local i32* @get_volume_f(i64, i32) #1

declare dso_local i32 @md5_doc_lookup(i32*, i8*, i64, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
